[package]
name = "sparkworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version="^0.3.0", default-features = false }
ark-ff = { version="^0.3.0", default-features = false }
rust-rw-device = { git = "https://github.com/ingonyama-zk/cloud-ZK.git" }
