[package]
name = "sparkworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version="^0.3.0", default-features = false }
ark-ff = { version="^0.3.0", default-features = false }
rust-rw-device = { git = "https://github.com/vhnatyk/cloud-ZK", branch = "dev/vhnat/feature/bn254" }
rust-rw-device-g2 = { git = "https://github.com/vhnatyk/cloud-ZK", branch = "dev/vhnat/feature/bn254" }
ark-bn254 = { version = "^0.3.0", features = ["curve"], optional=true }
rayon={ version="1.6.0"}

[dev-dependencies]
ark-std = "0.3.0"

[features]
default=["ark-bn254"]